feat: create, update and delete role routes
